--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     top: 0;
     background-image: url(img/lobo.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 header {
